updated for client integration
