# app/api/models/__init__.py
@@ -11,7 +11,7 @@ from app.api.models.latitude import Latitude
 from app.api.models.longitude import Longitude
 from app.api.models.origin import Origin
 from app.api.models.quantity import Quantity
-from app.api.models.solution import Solution
+from app.api.models.route import Route
 from app.api.models.unit import Unit
 from app.api.models.vehicle_capacity import VehicleCapacity
 from app.api.models.stack_id import StackID
