# app/api/models/route.py
@@ -9,66 +9,66 @@ from app import util
 from app.api.models.base_model_ import Model
 
 
-class Solution(Model):
+class Route(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(
-        self, cluster_id: int = None, vehicle_id: int = None, stop_num: int = None,
+        self, cluster_id: int = None, vehicle_id: int = None, stop_number: int = None,
     ):  # noqa: E501
-        """Solution - a model defined in Swagger
+        """Route - a model defined in Swagger
 
-        :param cluster_id: The cluster_id of this Solution.  # noqa: E501
+        :param cluster_id: The cluster_id of this Route.  # noqa: E501
         :type cluster_id: int
-        :param vehicle_id: The vehicle_id of this Solution.  # noqa: E501
+        :param vehicle_id: The vehicle_id of this Route.  # noqa: E501
         :type vehicle_id: int
-        :param stop_num: The stop_num of this Solution.  # noqa: E501
-        :type stop_num: int
+        :param stop_number: The stop_number of this Route.  # noqa: E501
+        :type stop_number: int
         """
         self.swagger_types = {
             "cluster_id": int,
             "vehicle_id": int,
-            "stop_num": int,
+            "stop_number": int,
         }
 
         self.attribute_map = {
             "cluster_id": "cluster_id",
             "vehicle_id": "vehicle_id",
-            "stop_num": "stop_num",
+            "stop_number": "stop_number",
         }
         self._cluster_id = cluster_id
         self._vehicle_id = vehicle_id
-        self._stop_num = stop_num
+        self._stop_number = stop_number
 
     @classmethod
-    def from_dict(cls, dikt) -> "Solution":
+    def from_dict(cls, dikt) -> "Route":
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Solution of this Solution.  # noqa: E501
-        :rtype: Solution
+        :return: The Route of this Route.  # noqa: E501
+        :rtype: Route
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def cluster_id(self) -> int:
-        """Gets the cluster_id of this Solution.
+        """Gets the cluster_id of this Route.
 
 
-        :return: The cluster_id of this Solution.
+        :return: The cluster_id of this Route.
         :rtype: int
         """
         return self._cluster_id
 
     @cluster_id.setter
     def cluster_id(self, cluster_id: int):
-        """Sets the cluster_id of this Solution.
+        """Sets the cluster_id of this Route.
 
 
-        :param cluster_id: The cluster_id of this Solution.
+        :param cluster_id: The cluster_id of this Route.
         :type cluster_id: int
         """
         if cluster_id is None:
@@ -80,20 +80,20 @@ class Solution(Model):
 
     @property
     def vehicle_id(self) -> int:
-        """Gets the vehicle_id of this Solution.
+        """Gets the vehicle_id of this Route.
 
 
-        :return: The vehicle_id of this Solution.
+        :return: The vehicle_id of this Route.
         :rtype: int
         """
         return self._vehicle_id
 
     @vehicle_id.setter
     def vehicle_id(self, vehicle_id: int):
-        """Sets the vehicle_id of this Solution.
+        """Sets the vehicle_id of this Route.
 
 
-        :param vehicle_id: The vehicle_id of this Solution.
+        :param vehicle_id: The vehicle_id of this Route.
         :type vehicle_id: int
         """
         if vehicle_id is None:
@@ -104,26 +104,26 @@ class Solution(Model):
         self._vehicle_id = vehicle_id
 
     @property
-    def stop_num(self) -> int:
-        """Gets the stop_num of this Solution.
+    def stop_number(self) -> int:
+        """Gets the stop_number of this Route.
 
 
-        :return: The stop_num of this Solution.
+        :return: The stop_number of this Route.
         :rtype: int
         """
-        return self._stop_num
+        return self._stop_number
 
-    @stop_num.setter
-    def stop_num(self, stop_num: int):
-        """Sets the stop_num of this Solution.
+    @stop_number.setter
+    def stop_number(self, stop_number: int):
+        """Sets the stop_number of this Route.
 
 
-        :param stop_num: The stop_num of this Solution.
-        :type stop_num: int
+        :param stop_number: The stop_number of this Route.
+        :type stop_number: int
         """
-        if stop_num is None:
+        if stop_number is None:
             raise ValueError(
-                "Invalid value for `stop_num`, must not be `None`"
+                "Invalid value for `stop_number`, must not be `None`"
             )  # noqa: E501
 
-        self._stop_num = stop_num
+        self._stop_number = stop_number
