# app/api/v0_1/models/routes_response.py
@@ -10,12 +10,12 @@ from app import util
 from app.api.models.base_model_ import Model
 from app.api.models.origin import Origin  # noqa: F401,E501
 from app.api.models.demand import Demand
-from app.api.models.solution import Solution  # noqa: F401,E501
+from app.api.models.route import Route  # noqa: F401,E501
 from app.api.models.unit import Unit  # noqa: F401,E501
 from app.api.models.stack_id import StackID
 
 
-class SolutionResponse(Model):
+class RoutesResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -26,29 +26,29 @@ class SolutionResponse(Model):
         stack_id: StackID = None,
         origin: Origin = None,
         demand: Demand = None,
-        solution: List[Solution] = None,
+        route: List[Route] = None,
         unit: Unit = None,
         vehicle_capacity: int = None,
     ):  # noqa: E501
-        """SolutionResponse - a model defined in Swagger
+        """RoutesResponse - a model defined in Swagger
 
         :param stack_id: TODO
-        :param origin: The origin of this SolutionResponse.  # noqa: E501
+        :param origin: The origin of this RoutesResponse.  # noqa: E501
         :type origin: Origin
-        :param demand: The demand of this SolutionResponse.
+        :param demand: The demand of this RoutesResponse.
         :type demand: Demand
-        :param solution: The solution of this SolutionResponse.  # noqa: E501
-        :type solution: List[Solution]
-        :param unit: The unit of this SolutionResponse.  # noqa: E501
+        :param Route: The Route of this RoutesResponse.  # noqa: E501
+        :type Route: List[Route]
+        :param unit: The unit of this RoutesResponse.  # noqa: E501
         :type unit: Unit
-        :param vehicle_capacity: The vehicle_capacity of this SolutionResponse.  # noqa: E501
+        :param vehicle_capacity: The vehicle_capacity of this RoutesResponse.  # noqa: E501
         :type vehicle_capacity: int
         """
         self.swagger_types = {
             "stack_id": StackID,
             "origin": Origin,
             "demand": Demand,
-            "solution": List[Solution],
+            "route": List[Route],
             "unit": Unit,
             "vehicle_capacity": int,
         }
@@ -57,44 +57,44 @@ class SolutionResponse(Model):
             "stack_id": "stack_id",
             "origin": "origin",
             "demand": "demand",
-            "solution": "solution",
+            "route": "route",
             "unit": "unit",
             "vehicle_capacity": "vehicle_capacity",
         }
         self._stack_id = stack_id
         self._origin = origin
         self._demand = demand
-        self._solution = solution
+        self._route = route
         self._unit = unit
         self._vehicle_capacity = vehicle_capacity
 
     @classmethod
-    def from_dict(cls, dikt) -> "SolutionResponse":
+    def from_dict(cls, dikt) -> "RoutesResponse":
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The solutionResponse of this SolutionResponse.  # noqa: E501
-        :rtype: SolutionResponse
+        :return: The RoutesResponse of this RoutesResponse.  # noqa: E501
+        :rtype: RoutesResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def stack_id(self) -> StackID:
-        """Gets the stack_id of this SolutionResponse.
+        """Gets the stack_id of this RoutesResponse.
 
 
-        :return: The stack_id of this SolutionResponse.
+        :return: The stack_id of this RoutesResponse.
         :rtype: StackID
         """
         return self._stack_id
 
     @stack_id.setter
     def stack_id(self, stack_id: StackID):
-        """Sets the stack_id of this SolutionResponse.
+        """Sets the stack_id of this RoutesResponse.
 
 
-        :param stack_id: The stack_id of this SolutionResponse.
+        :param stack_id: The stack_id of this RoutesResponse.
         :type stack_id: StackID
         """
         if stack_id is None:
@@ -106,20 +106,20 @@ class SolutionResponse(Model):
 
     @property
     def origin(self) -> Origin:
-        """Gets the origin of this SolutionResponse.
+        """Gets the origin of this RoutesResponse.
 
 
-        :return: The origin of this SolutionResponse.
+        :return: The origin of this RoutesResponse.
         :rtype: Origin
         """
         return self._origin
 
     @origin.setter
     def origin(self, origin: Origin):
-        """Sets the origin of this SolutionResponse.
+        """Sets the origin of this RoutesResponse.
 
 
-        :param origin: The origin of this SolutionResponse.
+        :param origin: The origin of this RoutesResponse.
         :type origin: Origin
         """
         if origin is None:
@@ -131,20 +131,20 @@ class SolutionResponse(Model):
 
     @property
     def demand(self) -> Demand:
-        """Gets the demand of this SolutionResponse.
+        """Gets the demand of this RoutesResponse.
 
 
-        :return: The demand of this SolutionResponse.
+        :return: The demand of this RoutesResponse.
         :rtype: Demand
         """
         return self._demand
 
     @demand.setter
     def demand(self, demand: Demand):
-        """Sets the demand of this SolutionResponse.
+        """Sets the demand of this RoutesResponse.
 
 
-        :param demand: The demand of this SolutionResponse.
+        :param demand: The demand of this RoutesResponse.
         :type demand: Demand
         """
         if demand is None:
@@ -153,46 +153,46 @@ class SolutionResponse(Model):
         self._demand = demand
 
     @property
-    def solution(self) -> List[Solution]:
-        """Gets the solution of this SolutionResponse.
+    def route(self) -> List[Route]:
+        """Gets the Route of this RoutesResponse.
 
 
-        :return: The solution of this SolutionResponse.
-        :rtype: List[Solution]
+        :return: The route of this RoutesResponse.
+        :rtype: List[Route]
         """
-        return self._solution
+        return self._route
 
-    @solution.setter
-    def solution(self, solution: List[Solution]):
-        """Sets the solution of this SolutionResponse.
+    @route.setter
+    def route(self, route: List[Route]):
+        """Sets the route of this RoutesResponse.
 
 
-        :param solution: The solution of this SolutionResponse.
-        :type solution: List[Solution]
+        :param route: The Route of this RoutesResponse.
+        :type route: List[Route]
         """
-        if solution is None:
+        if route is None:
             raise ValueError(
-                "Invalid value for `solution`, must not be `None`"
+                "Invalid value for `route`, must not be `None`"
             )  # noqa: E501
 
-        self._solution = solution
+        self._route = route
 
     @property
     def unit(self) -> Unit:
-        """Gets the unit of this SolutionResponse.
+        """Gets the unit of this RoutesResponse.
 
 
-        :return: The unit of this SolutionResponse.
+        :return: The unit of this RoutesResponse.
         :rtype: Unit
         """
         return self._unit
 
     @unit.setter
     def unit(self, unit: Unit):
-        """Sets the unit of this SolutionResponse.
+        """Sets the unit of this RoutesResponse.
 
 
-        :param unit: The unit of this SolutionResponse.
+        :param unit: The unit of this RoutesResponse.
         :type unit: Unit
         """
         if unit is None:
@@ -204,20 +204,20 @@ class SolutionResponse(Model):
 
     @property
     def vehicle_capacity(self) -> int:
-        """Gets the vehicle_capacity of this SolutionResponse.
+        """Gets the vehicle_capacity of this RoutesResponse.
 
 
-        :return: The vehicle_capacity of this SolutionResponse.
+        :return: The vehicle_capacity of this RoutesResponse.
         :rtype: int
         """
         return self._vehicle_capacity
 
     @vehicle_capacity.setter
     def vehicle_capacity(self, vehicle_capacity: int):
-        """Sets the vehicle_capacity of this SolutionResponse.
+        """Sets the vehicle_capacity of this RoutesResponse.
 
 
-        :param vehicle_capacity: The vehicle_capacity of this SolutionResponse.
+        :param vehicle_capacity: The vehicle_capacity of this RoutesResponse.
         :type vehicle_capacity: int
         """
         if vehicle_capacity is None:
